Fix mobile menu and text spacing for @

--- a/src/components/Header.style.css
+++ b/src/components/Header.style.css
@@ -25,8 +25,6 @@
 
 .header-nav__list-item-link:hover::after { opacity: 1 }
 
-.mobile-menu {
-  z-index: -1;
-}
+.mobile-menu {}
 
 .mobile-menu-nav { height: calc(100vh - 73px); }
